k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aspora
  labels:
    app.kubernetes.io/part-of: aspora
